[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni"
version = "2.0.0"
authors = [
    {name = "Mayank Nader", email = "mayank.n@hiverhq.com"},
]
description = "CLI tool for Hiver QA workflows"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
]

[project.scripts]
omni = "omni.main:cli"

[tool.setuptools.packages.find]
include = ["omni*"]
